<resources>
    <string name="app_name">MultipleChoiceTest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_toolbar">Toolbar</string>
    <string name="action_settings">Settings</string>

    <!--Quiz StartUp Page-->
    <string name="welcome">Welcome to Test Creator. Please select an option below.</string>
    <string name="createQ">Create Questions</string>
    <string name="mc">Create Multiple Choice Question</string>
    <string name="tf">Create True or False Question</string>
    <string name="shortAns">Create Short Answer Question</string>
    <string name="qList">See Question List</string>
    <string name="importList">Import From XML</string>
    <string name="stats">Statistics</string>

    <!--Toolbar Button-->
    <string name="help">Help</string>

    <!--Help Button-->
    <string name="help_menu">Help Menu</string>
    <string name="help_info">Author\'s Name: Amy Chau\n\nVersion Number: 01\n\nInstructions: This app allows user to add their own question to create a quiz.</string>

    <!--Buttons on Question List-->
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="updateQ">Update Question</string>
    <string name="delete">Delete Question</string>
    <string name="next">Next</string>

    <!--MC Fields-->
    <string name="question">Add a Question</string>
    <string name="choice1">Choice One</string>
    <string name="choice2">Choice Two</string>
    <string name="choice3">Choice Three</string>
    <string name="choice4">Choice Four</string>
    <string name="submit">Submit Question</string>
    <string name="answerHere">Input Answer Here  </string>

    <string name="accuracy">Please place the accuracy point (Ex: 2 for two decimal places)</string>

    <!--TF Fields-->
    <string name="trues">True</string>
    <string name="falses">False</string>

    <!--Statistics Fields-->
    <string name="numQues">Number of Questions: </string>
    <string name="longQues">Longest Length: </string>
    <string name="shortQues">Shortest Length: </string>
    <string name="avgQues">Average Length: </string>

    <!--<string name="app_name">MovieApp</string>-->
    <string name="search">search</string>
    <string name="movie_delete_message">Delete</string>
    <string name="movie_save_button">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_movie_toolbar">MovieToolbar</string>
    <string name="movie_box_title">Enter new greeting</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="movie_about">About</string>
    <string name="movie_greeting">Welcome to MovieApp</string>
    <string name="movie_saved">Movie Saved</string>
    <string name="movie_deleted">Movie Deleted</string>
    <string name="movie_snack">Enter movie name in search bar to find your favourite movie</string>
    <string name="movie_version">MovieApp \n version 1.0 \n by Jim Cassidy</string>
    <string name="movie_rating">Your average movie rating</string>

</resources>
