<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.amychau.multiplechoicetest.MultipleChoice">

    <include layout="@layout/app_bar"/>

    <EditText
        android:id="@+id/question"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        android:hint="@string/question"
        />
    <EditText
        android:id="@+id/choice1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42d4f4"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/question"
        android:hint="@string/choice1"/>

    <EditText
        android:id="@+id/choice2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42d4f4"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/choice1"
        android:hint="@string/choice2"
        />

    <EditText
        android:id="@+id/choice3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42d4f4"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:layout_below="@id/choice2"
        android:hint="@string/choice3"/>

    <EditText
        android:id="@+id/choice4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#42d4f4"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:layout_below="@+id/choice3"
        android:hint="@string/choice4"/>

    <EditText
        android:id="@+id/answerHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5DFF94"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/submit"
        android:hint="@string/answerHere"/>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"
        />

</RelativeLayout>
