<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/app_bar"/>

    <Button
        android:id="@+id/mc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="150dp"
        android:background="#33FF8D"
        android:text="@string/mc"
        android:textColor="#000000" />

    <Button
        android:id="@+id/tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FF8D"
        android:textColor="#000000"
        android:layout_marginBottom="50dp"
        android:text="@string/tf"
        />

    <Button
        android:id="@+id/shortAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FF8D"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:text="@string/shortAns"
        />
</LinearLayout>