<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amychau.multiplechoicetest.QuizCreaterMain"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="28dp"
        android:layout_marginBottom="100dp"
        />

    <Button
        android:id="@+id/mc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FF8D"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:text="@string/mc"
        />

    <Button
        android:id="@+id/tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FF8D"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:text="@string/tf"
       />

    <Button
        android:id="@+id/shortAns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FF8D"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:text="@string/shortAns"
        />

    <Button
        android:id="@+id/highScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#33FF8D"
        android:textColor="#000000"
        android:layout_marginBottom="25dp"
        android:text="@string/scores"
        />


</LinearLayout>
