<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/statsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:text="@string/stats"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:rowCount="4">


    <TextView
        android:id="@+id/numQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:text="@string/numQues"/>

        <TextView
            android:id="@+id/numberResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            />

    <TextView
        android:id="@+id/longQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:text="@string/longQues"/>

        <TextView
            android:id="@+id/longResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
           />

    <TextView
        android:id="@+id/shortQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:text="@string/shortQues"/>

        <TextView
            android:id="@+id/shortResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textColor="@android:color/background_light"
            android:layout_marginLeft="50dp"
            android:textSize="20sp"
            />

    <TextView
        android:id="@+id/avgLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:text="@string/avgQues"/>

        <TextView
            android:id="@+id/avgResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:textSize="20sp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="50dp"
            />

    </GridLayout>

</LinearLayout>