<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/questionHere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="17dp" />

    <TextView
        android:id="@+id/answerHere"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:background="#5DFF94"
        android:textColor="#000000"
        android:layout_below="@id/questionHere"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_toStartOf="@+id/ansButton"
        android:hint="@string/answerHere"/>

    <Button
        android:id="@+id/ansButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/answerHere"
        android:layout_alignBottom="@+id/answerHere"
        android:layout_alignStart="@+id/button1"
        android:text="@string/update" />

    <TextView
        android:id="@+id/option1"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerHere"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_toStartOf="@+id/button1" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/option1"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/ansButton"
        android:layout_marginEnd="12dp"
        android:text="@string/update"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/option2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/option1"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@+id/button2" />

    <TextView
        android:id="@+id/option3"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/option2"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@+id/button3" />

    <TextView
        android:id="@+id/option4"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_below="@id/option3"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@+id/button4" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/updateQ"/>

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/delete"
        />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/option2"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button1"
        android:layout_marginEnd="12dp"
        android:text="@string/update"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/option3"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button2"
        android:layout_marginEnd="12dp"
        android:text="@string/update"
        android:visibility="invisible" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/option4"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/button3"
        android:layout_marginEnd="12dp"
        android:text="@string/update"
        android:visibility="invisible" />

</RelativeLayout>